# s_nk_mob

./: .dockerignore  .env.production.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py  0002_master_workers.py
config/: settings.py  urls.py
core/: admin.py  models.py
core/management/commands/: import_units.py  import_work_tree.py  import_workers.py  set_sort_order.py
core/migrations/: 0001_initial.py  0002_alter_worknode_options_worknode_source_key_and_more.py  0003_worknode_sort_order.py
data/: ЕР.xlsx  СМУ.xlsx  Структура ЕР.xlsx
docs/: tree_import_spec.md
reports/: admin.py  models.py  urls.py  views.py
reports/migrations/: 0001_initial.py  0002_update_worker_entry_statuses.py
reports/templates/reports/: add_work_item.html  dashboard.html  master_login.html  report_calendar.html  report_summary.html  timesheet.html  work_node_list.html
static/css/: app.css
templates/: base.html
templates/registration/: login.html
