[project]
name = "s-nk-mob"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "gunicorn>=25.3.0",
    "openpyxl>=3.1.5",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
